[gd_scene load_steps=7 format=3 uid="uid://bh0bqya2jla5j"]

[ext_resource type="Script" uid="uid://dy6kysucj6gjc" path="res://world.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://ca0qb0ckmyho4" path="res://entidades/vertice.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cqqgkgi6it0ng" path="res://entidades/arista.tscn" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://u5dovwfqvhxf" path="res://caja_herramientas.gd" id="3_h2yge"]
[ext_resource type="Script" uid="uid://cn4si5v8371jp" path="res://estadisticas.gd" id="5_7mycd"]
[ext_resource type="Script" uid="uid://bski57waoy50a" path="res://numero_cromatico.gd" id="5_lquwl"]

[node name="World" type="Node"]
script = ExtResource("1_ig7tw")
escenaVertice = ExtResource("2_0xm2m")
escenaArista = ExtResource("3_1bvp3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Top" type="Panel" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 5.0
offset_right = 262.0
offset_bottom = 144.0
grow_horizontal = 2
script = ExtResource("3_h2yge")

[node name="Herramientas" type="HBoxContainer" parent="UI/Top"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -245.0
offset_top = 14.0
offset_right = 242.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="AddArista" type="Button" parent="UI/Top/Herramientas"]
layout_mode = 2
text = "Añadir arista"

[node name="AddVertice" type="Button" parent="UI/Top/Herramientas"]
layout_mode = 2
text = "Añadir vertice"

[node name="QuitarArista" type="Button" parent="UI/Top/Herramientas"]
layout_mode = 2
text = "Eliminar arista"

[node name="QuitarVertice" type="Button" parent="UI/Top/Herramientas"]
layout_mode = 2
text = "Eliminar vertice"

[node name="Cancelar" type="Button" parent="UI/Top"]
visible = false
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_right = 37.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "cancelar"

[node name="Multigrafo" type="CheckBox" parent="UI/Top"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -31.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
text = "multigrafo"

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -196.0
grow_horizontal = 2
grow_vertical = 0

[node name="Title" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 6.0
offset_bottom = 29.0
grow_horizontal = 2
text = "Sobre este grafo"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 35.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Estadisticas" type="Control" parent="UI/Panel/TabContainer"]
layout_mode = 2
script = ExtResource("5_7mycd")
metadata/_tab_index = 0

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Panel/TabContainer/Estadisticas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 6.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="NumeroCromatico" type="Control" parent="UI/Panel/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_lquwl")
metadata/_tab_index = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Panel/TabContainer/NumeroCromatico"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 5.0
offset_right = -11.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 323)

[connection signal="estado_cambiado" from="." to="UI/Top" method="_on_world_estado_cambiado"]
[connection signal="pressed" from="UI/Top/Herramientas/AddArista" to="." method="_on_add_arista_pressed"]
[connection signal="pressed" from="UI/Top/Herramientas/AddVertice" to="." method="_on_add_vertice_pressed"]
[connection signal="pressed" from="UI/Top/Herramientas/QuitarVertice" to="." method="_on_quitar_vertice_pressed"]
[connection signal="pressed" from="UI/Top/Cancelar" to="." method="_on_cancelar_pressed"]
[connection signal="toggled" from="UI/Top/Multigrafo" to="." method="_on_multigrafo_toggled"]
